force-app/main/default/objects/Campaign/fields/sffr_3party_segment__c.field-meta.xml
<CustomField>
    <fullName>sffr_3party_segment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Third Party Segment</label>
    <referenceTo>sffr_3party_segment__c</referenceTo>
    <relationshipLabel>Campaign Segments</relationshipLabel>
    <relationshipName>Campaign_Segments</relationshipName>
    <type>Lookup</type>
</CustomField>