force-app/main/default/objects/Campaign/fields/sffr_campaign_content__c.field-meta.xml
<CustomField>
    <fullName>sffr_campaign_content__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Campaign Content</label>
    <referenceTo>ssfr_campaign_content__c</referenceTo>
    <relationshipLabel>Campaign Segments</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>