force-app/main/default/objects/Campaign/fields/SFFR_Dedup_Order__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Dedup_Order__c</fullName>
    <inlineHelpText>Designates the Deduplication order between segments.</inlineHelpText>
    <label>Dedupe Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>