force-app/main/default/objects/Campaign/fields/SFFR_Delivered_Quantity__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Delivered_Quantity__c</fullName>
    <label>Delivered Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>