force-app/main/default/objects/Campaign/fields/SFFR_Dispatcher__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Dispatcher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the Account which send out the campaign message on behalf of the non profit organisation.</inlineHelpText>
    <label>Dispatcher</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Organization</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>