force-app/main/default/objects/Campaign/fields/SFFR_External_Key__c.field-meta.xml
<CustomField>
    <fullName>SFFR_External_Key__c</fullName>
    <inlineHelpText>Designates the External Key.</inlineHelpText>
    <label>External Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>