force-app/main/default/objects/Campaign/fields/sffr_external_ref__c.field-meta.xml
<CustomField>
    <fullName>sffr_external_ref__c</fullName>
    <label>External Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>