force-app/main/default/objects/Campaign/fields/SFFR_Max_Ordered_Quantity__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Max_Ordered_Quantity__c</fullName>
    <inlineHelpText>Indique le nombre total maximum de messages souhaité pour un code source/external ref donné.</inlineHelpText>
    <label>Maximum Ordered Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>