force-app/main/default/objects/Campaign/fields/SFFR_ReplacementCampaign__c.field-meta.xml
<CustomField>
    <fullName>SFFR_ReplacementCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replacement Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Replacement Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>