force-app/main/default/objects/Campaign/fields/SFFR_ROI__c.field-meta.xml
<CustomField>
    <fullName>SFFR_ROI__c</fullName>
    <formula>IF (HierarchyActualCost&gt;0,(HierarchyAmountWonOpportunities-HierarchyActualCost)/HierarchyActualCost,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ROI is net Gain. (HierarchyAmountWonOpportunities-HierarchyActualCost)/HierarchyActualCost</inlineHelpText>
    <label>ROI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>