force-app/main/default/objects/Campaign/fields/SFFR_Segmentations_External_Key__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Segmentations_External_Key__c</fullName>
    <label>Segmentation External Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>