force-app/main/default/objects/Campaign/recordTypes/SFFR_Campaign.recordType-meta.xml
<RecordType>
    <fullName>SFFR_Campaign</fullName>
    <active>true</active>
    <label>Campaign</label>
</RecordType>