force-app/main/default/objects/Campaign/recordTypes/sffr_external_segment.recordType-meta.xml
<RecordType>
    <fullName>sffr_external_segment</fullName>
    <active>true</active>
    <label>External Segment</label>
</RecordType>