force-app/main/default/objects/Campaign/recordTypes/sffr_internal_segment.recordType-meta.xml
<RecordType>
    <fullName>sffr_internal_segment</fullName>
    <active>true</active>
    <label>Internal Segment</label>
</RecordType>