force-app/main/default/objects/Campaign/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>SFFR_Dedup_Order__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>TOT_NUM_SENT</columns>
    <columns>CAMPAIGN.TOT_WON_OPPORTUNITIES</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>